--- a/_posts/2009-11-15-2-02900.md
+++ b/_posts/2009-11-15-2-02900.md
@@ -66,7 +66,7 @@ tag: [normal]
 
 　　这座水头20米，水流量每秒两立方米的小水电站，可以为基地提供200KW的电力。未来的远景规划是达到5台机组1000KW的发电功率。
 
-　　因为即将有二台发电机同时发电，原先简单的拉电线供电的模式就要有所改变。常凯申计划建立起新的电网系统。系统是成套采购的，这个电力网将采用110千伏电压高压送电，用电则采用工业380伏和民用220伏，这都是本时空现成的电压标准，也符合他们带来的各种机械设备的用电需求。
+　　因为即将有二台发电机同时发电，原先简单的拉电线供电的模式就要有所改变。[常凯申][y010]计划建立起新的电网系统。系统是成套采购的，这个电力网将采用110千伏电压高压送电，用电则采用工业380伏和民用220伏，这都是本时空现成的电压标准，也符合他们带来的各种机械设备的用电需求。
 
 　　电网的输电线路梅晚为了安全起见原打算都安装在地下，但是没有合适的耐腐蚀的电缆套管，所以继续采用电线杆架空输电，好在从水电区到主城区的线路全长才100米，完全在视线范围之内。如果有必要，可以用城墙把两个区域之间连接起来，不过暂时还没这个必要。
 
@@ -85,3 +85,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
 [y009]: /characters/y009 "吴南海"
+[y010]: /characters/y010 "常凯申"
