--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -128,7 +128,7 @@ tag: [normal]
 
 　　c)冶金——季无声（寂静无声），现任冶金工业人民委员、临高钢铁公司总经理、总工程师，历任冶金组组长、冶金部部长
 
-　　d)能源——常凯申（ID不详），现任电力总公司经理兼总工程师，历任能源组成员（负责送电设计）
+　　d)能源——[常凯申][y010]（ID不详），现任电力总公司经理兼总工程师，历任能源组成员（负责送电设计）
 
 　　e)轻工业——莫笑安（heisuojin），现任轻工业部人民委员、法学俱乐部顾问，历任基干民兵、粮油食品总公司总经理
 
@@ -490,7 +490,7 @@ tag: [normal]
 19、季无声（寂静无声），现任冶金工业人民委员、临高钢铁公司总经理、总工程师，历任冶金组组长、冶金部部长
 
 
-20、常凯申（ID不详），现任电力总公司经理兼总工程师，历任能源组成员（负责送电设计）
+20、[常凯申][y010]（ID不详），现任电力总公司经理兼总工程师，历任能源组成员（负责送电设计）
 
 21、凌天（tian0123），现任电力总公司成员
 
@@ -878,7 +878,7 @@ ID不明的穿越者（如有知情者请补充）
 
 1、 程栋
 
-2、 常凯申
+2、 [常凯申][y010]
 
 3、 何鸣
 
@@ -3451,3 +3451,4 @@ ID不明的穿越者（如有知情者请补充）
 [y110]: /characters/y110 "曹顺花"
 [y156]: /characters/y156 "李潇侣"
 [y009]: /characters/y009 "吴南海"
+[y010]: /characters/y010 "常凯申"
