--- a/_posts/2009-9-15-1-01500.md
+++ b/_posts/2009-9-15-1-01500.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 　　“那我们先从能源方面谈起吧。”[萧子山][y001]把头转向能源组，“能源是一切的关键。只要我们拥有电力，我们就能够使用从现代机器到电脑等任何工具——这些全面超越古人的优势装备。能源组对我们的电力供应问题怎么看？”
 
-　　能源组里站起来发言的是常凯申，作为一个临时工，在某电力集团下属企业已经工作五年，属于干活最多，拿钱最少，功劳没有，黑锅你背的那类的人。
+　　能源组里站起来发言的是[常凯申][y010]，作为一个临时工，在某电力集团下属企业已经工作五年，属于干活最多，拿钱最少，功劳没有，黑锅你背的那类的人。
 
 　　“根据我们所要面临的状况，采取水电为主，火电、风电为辅的电力策略比较合适。
 
@@ -22,7 +22,7 @@ tag: [normal]
 
 　　“柴油机比较容易找到替代产品的，我记得用花生油也可以。”能源组有人说了。
 
-　　“呵呵，用不用的了花生油我不知道，但是柴油机可改成煤气机。”常凯申想了下，“我在农村的时候看到很多小发电站是使用煤气机的，应该不难。”
+　　“呵呵，用不用的了花生油我不知道，但是柴油机可改成煤气机。”[常凯申][y010]想了下，“我在农村的时候看到很多小发电站是使用煤气机的，应该不难。”
 
 　　“我想我们以后能造出柴油的。”[萧子山][y001]说，“继续吧。”
 
@@ -102,3 +102,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y010]: /characters/y010 "常凯申"
