--- a/_posts/2010-4-19-3-00100.md
+++ b/_posts/2010-4-19-3-00100.md
@@ -46,7 +46,7 @@ tag: [normal]
 
 　　会议的主题是未来的发展规划。这些部门的领导人，多半是新近机构调整中提拔的，个个志得意满，摩拳擦掌的准备把自己的满怀经纶大展拳脚一番。每个部门都提出了自己的建设方案。
 
-　　“我们目前的重中之重，是完成百仞滩水电站二期，”临高电力公司的总经理兼总工程师常凯申说。
+　　“我们目前的重中之重，是完成百仞滩水电站二期，”临高电力公司的总经理兼总工程师[常凯申][y010]说。
 
 　　“过去这一工程之所以迟迟不能完工，很大程度上是我们的劳动力匮乏，现在既然有了这么多的劳动力，水泥、砖石、竹筋砼供应也不虞匮乏，就应该尽快完成它。”
 
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　“输配电的问题能解决么？”[马千瞩][y005]问。
 
-　　“可以解决。”常凯申胸有成竹，“我们有全套的器材，可以架设百仞－博铺的110千伏线路——这样输电损耗小一些。既然执委会把文澜河两岸作为主基地，从原来时空带来的器材就主要用在这里好了。我相信以后我们能量产简单的输配电设备。”
+　　“可以解决。”[常凯申][y010]胸有成竹，“我们有全套的器材，可以架设百仞－博铺的110千伏线路——这样输电损耗小一些。既然执委会把文澜河两岸作为主基地，从原来时空带来的器材就主要用在这里好了。我相信以后我们能量产简单的输配电设备。”
 
 　　“如果决定修建百仞水电站二期，那么就不仅是一个水电站的问题了，而是作为文澜河流域综合治理工程的一项来做。”[马千瞩][y005]说。
 
@@ -82,3 +82,4 @@ tag: [normal]
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y010]: /characters/y010 "常凯申"
