--- a/_posts/2010-8-16-3-12000.md
+++ b/_posts/2010-8-16-3-12000.md
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　胡青白请他到自己的办公室里，里面空荡荡的只有两张面对面的办公桌，几把藤椅。
 
-　　“申请电灯都没有！”胡青白大吐苦水，“常凯申非说这地方不在他们的架线范围之内！”
+　　“申请电灯都没有！”胡青白大吐苦水，“[常凯申][y010]非说这地方不在他们的架线范围之内！”
 
 　　“现在很缺师资！穿越者愿意来当专职教师的没有几个。我又没人事权。到处求爷爷告奶奶，到现在教育部只有十二个人。就这十二个人还要负责检疫营的扫盲教育，忙得要死。”胡青白大吐苦水，“大家都觉得当孩子王没意思，愿意兼职的倒是不少，可是兼职的人时间有限，总不能都开夜校吧！”
 
@@ -102,3 +102,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y010]: /characters/y010 "常凯申"
