--- a/_posts/2010-8-22-3-12600.md
+++ b/_posts/2010-8-22-3-12600.md
@@ -48,7 +48,7 @@ tag: [normal]
 
 　　果然这烧碱车间是够简陋的，不过比起目前还裸露在露天的硫酸车间来，它好歹还有个遮盖——电解车间牵涉到电的问题，不能暴露在风雨中。整个建筑是砖柱、木梁的框架结构，除了少数关键部位设有围墙外，其他地方全部是敞开式的，利于通风。宝贵易损的变压器拥有单独的变电间，有玻璃窗户便于观察。
 
-　　整个厂房的总面积大约五百平方米，地面用砖块铺砌。常凯申正带着凌天和几个土著学徒安装一台变压器——把博铺发电站送出的交流电转换成直流电，这样才能用来电解。
+　　整个厂房的总面积大约五百平方米，地面用砖块铺砌。[常凯申][y010]正带着凌天和几个土著学徒安装一台变压器——把博铺发电站送出的交流电转换成直流电，这样才能用来电解。
 
 　　十个电解槽已经安装就位。季思退原本考虑过采购现成的，但是重量让他放弃了这个想法，最后只采购了核心部件。槽体则是本地制造——用钢筋编织成型，再用水泥黄沙浇注成型的方形槽，每个槽1.4米宽，0.8米宽，0.4米高。槽内砌上瓷砖以免被腐蚀。在槽内距离槽底0.1米的地方平着镶嵌一张铁丝网。每个槽子还配有木质盖子，上面涂有木焦油沥青防腐蚀。
 
@@ -95,3 +95,4 @@ tag: [normal]
 　　罐子上贴上“98％浓硫酸”、生产日期、生产地点的标签之后，被小心的装进木器工厂特制的木箱里，一个或者两个一箱。箱子里用草绳缠绕罐子作为减震缓冲用。然后被装上列车，运到化工危险品仓库去。
 
 　　硫酸初战告捷之后，季思退带着土著工人们边生产边教学了十几天，直到土著工人基本掌握了生产工艺和流程，以及把安全生产规范全部背下来为止。
+[y010]: /characters/y010 "常凯申"
