--- a/_posts/2011-2-25-3-31300.md
+++ b/_posts/2011-2-25-3-31300.md
@@ -34,7 +34,7 @@ tag: [normal]
 
 　　这一问无疑引起了众人的心事，一时间群情汹汹，嘴炮横飞，大有“就差二个人”之势，直到有人喊出了“丰城轮一声炮响”的时候，这个帖子就被锁了。
 
-　　虽然BBS上采用的是实名制，但是穿越群众显然比另一个时空要大无畏的多，马上就有许多人发贴质问锁贴的原因，有人试图为执委会开脱，立刻惨遭划时代的“五流通券”帽子，于是局面从一边倒的声讨变成了两边混战。不知道怎么的话题又转席亚洲身上了，当年删贴的积怨被人重提，群情激奋中有人提议“二次革命”之后立即就把他枪毙。正当双方刷贴盖楼的气氛达到高潮的时候，0点汽笛一响，常凯申准时拉了电闸，全部讨论中止。
+　　虽然BBS上采用的是实名制，但是穿越群众显然比另一个时空要大无畏的多，马上就有许多人发贴质问锁贴的原因，有人试图为执委会开脱，立刻惨遭划时代的“五流通券”帽子，于是局面从一边倒的声讨变成了两边混战。不知道怎么的话题又转席亚洲身上了，当年删贴的积怨被人重提，群情激奋中有人提议“二次革命”之后立即就把他枪毙。正当双方刷贴盖楼的气氛达到高潮的时候，0点汽笛一响，[常凯申][y010]准时拉了电闸，全部讨论中止。
 
 　　第二天晚上的讨论要稍微平静一点：当天[萧子山][y001]刚刚在BBS上代表办公厅宣布了多种生活物资凭票配给制度取消，大伙可以自由购买。这让心怀怨气的群众们稍稍有所缓和，而且办公厅刚刚发了住宅设计图征求意见稿，为每位穿越者的独立住宅征求意见，这些事情大大的缓解了宅男们的不满。
 
@@ -78,3 +78,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y010]: /characters/y010 "常凯申"
