--- a/_posts/2013-7-12-6-09000.md
+++ b/_posts/2013-7-12-6-09000.md
@@ -34,11 +34,11 @@ tag: [normal]
 
 　　刘汤姆对“故障”二字一贯心惊胆战，一方面他过去长期是乙方，故障一出，甲方势必要把他们叫去一顿狂喷；另一方面，在本时空他虽然做了甲方，却没有可以狂喷的乙方。一旦出了故障，损坏的往往是一级或者二级的“管控物资”。而且就元老院目前的工业水准来看，修复基本上是没可能的，也就只剩下回收零件和原材料的价值了。在一个连输电电缆都无法自产的时空，一旦损害一台电力设备，后果有多严重谁都明白。
 
-　　从D日到现在已经三年多了，临高电力一直处于近乎被遗忘的尴尬境界。刚开始的时候常凯申还高踞能源部委的高位，但是很快发现这完全是一个跑龙套的，在百仞滩的水电站和博铺的火电站相继完工之后，电力口的日常工作只剩下了运行和维护，由于无论电源还是用户都相当薄弱，无法形成大电网效应。电站运行需要大量操作，虽然带来了一些电力调度设备，但是大多数地方都没有自动化设备的辅助——这种吃力不讨好的事情很快让电力口的那帮大少爷们心灰意懒，纷纷转投他处，进入海陆军的，去企划院的……转眼只剩最初的能源部长常凯申跟几个他苦苦挽留下来的“技术精英”——刘汤姆也是其中之一。
+　　从D日到现在已经三年多了，临高电力一直处于近乎被遗忘的尴尬境界。刚开始的时候[常凯申][y010]还高踞能源部委的高位，但是很快发现这完全是一个跑龙套的，在百仞滩的水电站和博铺的火电站相继完工之后，电力口的日常工作只剩下了运行和维护，由于无论电源还是用户都相当薄弱，无法形成大电网效应。电站运行需要大量操作，虽然带来了一些电力调度设备，但是大多数地方都没有自动化设备的辅助——这种吃力不讨好的事情很快让电力口的那帮大少爷们心灰意懒，纷纷转投他处，进入海陆军的，去企划院的……转眼只剩最初的能源部长[常凯申][y010]跟几个他苦苦挽留下来的“技术精英”——刘汤姆也是其中之一。
 
-　　常凯申对此也心灰意懒，将几块主要的工作分割给麾下的几名大将之后，开始对电力方面的事情不闻不问。因为电力这块短板短时间内根本补不上，企划院规划的能源政策主要是全面“蒸汽化”和“煤气化”
+　　[常凯申][y010]对此也心灰意懒，将几块主要的工作分割给麾下的几名大将之后，开始对电力方面的事情不闻不问。因为电力这块短板短时间内根本补不上，企划院规划的能源政策主要是全面“蒸汽化”和“煤气化”
 
-　　蒸汽机、锅炉和气化炉如同雨后春笋一般在临高的各个角落矗立起来。对煤炭的需求远远超过了电力，于是常凯申部长的主要精力就放在煤炭的物流调度上了。渐渐的成了物流方面的专家。
+　　蒸汽机、锅炉和气化炉如同雨后春笋一般在临高的各个角落矗立起来。对煤炭的需求远远超过了电力，于是[常凯申][y010]部长的主要精力就放在煤炭的物流调度上了。渐渐的成了物流方面的专家。
 
 　　电力口在遭遇到如此重挫之后，不可避免的经历了数次大大小小的事故，甚至烧毁一台10kV压器。从百仞滩到博铺的10kV电路被停用，那台被烧毁的变压器就是两边的发电机在并网之后因为博铺突然停电甩负荷不及时给烧的。事实上把两种操作起来迥异的两组机组并联起来并且给两负荷极大不相称的地区供电远远超出了元老院工业体系的能力，虽然电力口有修过发电站的，有干过电网调度的，也有写过智能电网论文的，甚至有设计过无人值守变压站的，但是这些不代表他们能迅速搞定一个由各种频繁启停的电动机用户所构成的电网。
 
@@ -61,3 +61,4 @@ tag: [normal]
 　　刘汤姆戴好安全帽，扫视了一边戴着藤头盔，身穿工作服，挎着帆布包的归化民电工们，举手一只手高呼道：“安全第一，预防为主！生命宝贵，安全第一！”
 
 　　电工们一起举起手臂呼应：“安全生产，人人有责！遵章守纪，保障安全！”
+[y010]: /characters/y010 "常凯申"
