--- a/_posts/2013-7-14-6-09200.md
+++ b/_posts/2013-7-14-6-09200.md
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　刘汤姆检查完毕，下了丰城轮，又巡视了博铺电站——到这里算是今日的巡视基本告一段落了，正要收工回百仞吃饭去，他的小灵通上显示一条短信：“下午13：00在企划院会议室召开电力工作会议。请准时参加！”
 
-　　刘汤姆大吃一惊，倒不是13：00开会可能会使他来不及吃午饭，而是常凯申一个月前布置给他的写一份输配电发展纲要，他到现在除了几句话的提纲之外什么也没写。没想到这就要上企划院去开会了！
+　　刘汤姆大吃一惊，倒不是13：00开会可能会使他来不及吃午饭，而是[常凯申][y010]一个月前布置给他的写一份输配电发展纲要，他到现在除了几句话的提纲之外什么也没写。没想到这就要上企划院去开会了！
 
 　　自己作为临高电力的主要“骨干”，开会的时候肯定会被点名发言。刘汤姆赶紧三步并作两步的奔向小发艇，后面的一干电工不知所以然，也跟着狂奔，总算全跟了上来。
 
@@ -52,7 +52,7 @@ tag: [normal]
 
 　　每次这种学术型的会议会预先在各个食堂，住宅区和论坛上发出通知，如果谁要是有兴趣，就可以来参加，甚至驻外人员也可以从无线电上收到这些通知，他们也可以写一段简单的意见发回来在会议上进行讨论。
 
-　　会议室里现在聚集了几十名元老，所有很电力有关的元老都来了，还来了许多事关电力设备制造的机械、化工和材料方面的元老。当然也少不了受企划院委托来主持会议的常凯申部长。
+　　会议室里现在聚集了几十名元老，所有很电力有关的元老都来了，还来了许多事关电力设备制造的机械、化工和材料方面的元老。当然也少不了受企划院委托来主持会议的[常凯申][y010]部长。
 
 　　元老们分成几堆，交头接耳的说着话。电力是个令人感兴趣的话题，作为工业企业来说，虽然目前推行的蒸汽机化，但是就很多机械口的元老来说，电动机带动的机床在运行的时候更为稳定，比动力轴传动要好得多。
 
@@ -60,10 +60,11 @@ tag: [normal]
 
 　　电力部门的元老更是一个个神采奕奕，自从电力部门从上下关心的要害部门成了爹嫌娘不问的边缘部门。留在电力口的几位也纷纷找执委会企划院甚至组织部表示要撂挑子的意思，虽说电气革命是势所必然，但是对于一心创建伟大事业的电力口诸位大爷来说，这种比穿越之前还蛋疼的时间是一秒都不想多呆了。
 
-　　这次会议的召开算是给他们打了一针剂兴奋剂。据常凯申透露：执委会已经将电力作为发展的重中之重，执委会已经给电力口下达了若干研发命令，同时企划院对原先的电机厂，变压器厂，电缆厂等项目都进行了批复，还下文给机械冶金材料科技各部门进行配合，尽快将帝国的电力工业发展起来。
+　　这次会议的召开算是给他们打了一针剂兴奋剂。据[常凯申][y010]透露：执委会已经将电力作为发展的重中之重，执委会已经给电力口下达了若干研发命令，同时企划院对原先的电机厂，变压器厂，电缆厂等项目都进行了批复，还下文给机械冶金材料科技各部门进行配合，尽快将帝国的电力工业发展起来。
 
 　　法拉第原本有点受到挫折的雄心再次燃起，他从小是在一个父母双职工的国营冶金厂长大，但是由于父母对国家电力部门金饭碗的认识和那几年大下岗的恐惧，他顺利考上某电力学校然后毕业分配到某市郊区的变电站，在经过若干年值守电站的生涯之后，他参加了穿越，随后就被分到电力口——干的是和刘汤姆一样的活。不过他到底是电力方面的科班出身，掌握的知识要比搞输配电的刘汤姆要全面一点，因而干的活也更杂。
 
 　　“法拉第同志在此期间任劳任怨，完成和解决了现实情况下的多种技术困难，而随着这些困难的解决，他埋藏在家族血脉中的那个理想愈来愈赤灼，当时间来到1630年电力口变得万马齐喑的时候，他已经开始着手研究电机的制造，而执委会和企划院的行政批文也恰到好处地来到了电力部门的办公室，这时候法拉第勇敢地挑起了研究电机的重任，是他将极有可能熄灭的电力工业重新燃烧了起来！
 
-　　在整个研究过程中，他和后来的物流行业巨擘常凯申的深厚情谊给他带来了很多原料方面的便利，而帝国在未来的东亚电网超高压输变电系统、喜马拉雅超级电站、长江梯级电站也获得了常凯申运输集团的巨大支持，他的仁爱和善良将永远照耀帝国”（《电力工业发展史·人物卷·法拉第传》）
+　　在整个研究过程中，他和后来的物流行业巨擘[常凯申][y010]的深厚情谊给他带来了很多原料方面的便利，而帝国在未来的东亚电网超高压输变电系统、喜马拉雅超级电站、长江梯级电站也获得了[常凯申][y010]运输集团的巨大支持，他的仁爱和善良将永远照耀帝国”（《电力工业发展史·人物卷·法拉第传》）
+[y010]: /characters/y010 "常凯申"
