--- a/_posts/2013-7-15-6-09300.md
+++ b/_posts/2013-7-15-6-09300.md
@@ -38,7 +38,7 @@ tag: [normal]
 
 　　为了试制这台电动机，他又找了几个机械和材料方面的元老帮忙。利用科技部的车间和设备忙活起来了。终于在1632年的秋季试制成功第一台本时空制造的Y系列三相鼠笼异步电动机。取名为“光明初号机”。当然，“光明初号机”还谈不上是真正的“临高制造”，不但它的硅钢来自另一个时空，连绕线用的铜线也是用从旧时空带来电解铜的铜丝。本时空他们冶炼的铜材全部是火法铜，根本不适合用作电机的绕线材料。
 
-　　不过，这一成果验证了电力部门完全有能力自制电机，这使得电力部门上上下下的信心充足了许多。常凯申部长在一次审批法拉第申请物资和经费的报告的时候意味深长的说道：“电动机试验任务紧啊！”
+　　不过，这一成果验证了电力部门完全有能力自制电机，这使得电力部门上上下下的信心充足了许多。[常凯申][y010]部长在一次审批法拉第申请物资和经费的报告的时候意味深长的说道：“电动机试验任务紧啊！”
 
 　　倒是主要的干将法拉第和钱六石，反倒没这么大的信心。他们知道，只要钢铁公司一天拿不出硅钢来，他们的一切成果就全是天上的浮云。他们准备量产的这个系列的电机需要的硅钢片，小的几公斤，大的大约一百公斤。这么多硅钢靠企划院的储备是不可能的，必须立足于自产的硅钢。
 
@@ -52,6 +52,7 @@ tag: [normal]
 
 　　幸好他觉得这也是一个很不错的选择。由于加入穿越组织时间比较晚，等他来的时候基本已经万事俱备了，而他又已经散尽家财裸身投效，连个投名状都没有。关于购买多种水轮机，汽轮机，锅炉，燃气轮机和各型发电机的建议也因为随便一台机子就要成百上千万而被毙掉了。幸好他之前弄到了大量的各种发电设备、电力设施的制造图纸，勉强给了自己一点买了船票的自信。可惜的是他的图纸中容量最小的发电机组是5000kW的，而次小的就是3万5千kW的，而现在穿越众连制造500kW发电机的能力都没有。让他时常有空怀屠龙绝技的叹息。
 
-　　随着时针渐渐指向1点，受企划院委托来主持会议的能源人民委常凯申走上了发言席。常元老不过三十几岁，头发却已经有点谢顶的倾向了。他说话慢条斯理，略带浙江口音。
+　　随着时针渐渐指向1点，受企划院委托来主持会议的能源人民委[常凯申][y010]走上了发言席。常元老不过三十几岁，头发却已经有点谢顶的倾向了。他说话慢条斯理，略带浙江口音。
 
 　　“同志们，我，受企划院邬德院长的委托，今天来主持这个电力工作会议，希望大家在会议上畅所欲言，为元老院的电气化做出自己的贡献！在这新的一年里，让我们为新的生活新的工作而努力！”
+[y010]: /characters/y010 "常凯申"
