--- a/_posts/2013-7-16-6-09400.md
+++ b/_posts/2013-7-16-6-09400.md
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　“下面，我们请电力发展计划的负责人：钱六石同志来谈一谈我们的电力发展计划。”
 
-　　钱六石站了起来，拿着一个文件夹满面春风的走上了讲台他先和常凯申热烈的握手，然后示意坐在床边的元老拉上窗帘，接着他打开了桌子上的一台投影机。
+　　钱六石站了起来，拿着一个文件夹满面春风的走上了讲台他先和[常凯申][y010]热烈的握手，然后示意坐在床边的元老拉上窗帘，接着他打开了桌子上的一台投影机。
 
 　　这台不是电脑投影机，而是传统的透射式投影器，在座的元老们对这种投影仪也颇为熟悉。对于钱六石来说，这种投影仪是他在小学和初中时代所遇到的最先进的多媒体设备了，甚至他还帮老师做过很多的幻灯片。现在谁也没心思花很长的时间去在电脑上做PPT，而且他们没有互联网，没法从网上浩如烟海的资料中去选择下载贴切的图片和素材，只能自己手画自己在电脑上手画的话还不如直接在塑料片上手画呢。
 
@@ -30,7 +30,7 @@ tag: [normal]
 
 　　“现在我就之前在论坛和其他会议上的讨论的结果简要地说明一下今天的会议议程，还希望大家补充我所没列出来的。下面，我先谈一下目前我们临高电力公司的现状。”
 
-　　钱六石和法拉第几天前已经和常凯申在企划院和邬德等人进行了一次长谈。谈话的内容主要是电力部门的现状、现有的机械制造、金属冶炼工业的产能和技术水平问题。电力公司实际上只是一个发电、输电和配电的企业，电力设备的制造实际上还是要仰仗于工业部门的，而机械制造水平和冶金工业的能力又决定了电力工业的规模和水准。
+　　钱六石和法拉第几天前已经和[常凯申][y010]在企划院和邬德等人进行了一次长谈。谈话的内容主要是电力部门的现状、现有的机械制造、金属冶炼工业的产能和技术水平问题。电力公司实际上只是一个发电、输电和配电的企业，电力设备的制造实际上还是要仰仗于工业部门的，而机械制造水平和冶金工业的能力又决定了电力工业的规模和水准。
 
 　　临高电力拥有的全部发电能力，目前联入电网的总发电瓦数为1120kW其中水力发电为600kW,百仞水电站的3台200kW机组。火力发电520kW：博铺丰城轮电站100kW，博铺火电站420kW由2台捷克制造的固定式锅驼机驱动。
 
@@ -59,3 +59,4 @@ tag: [normal]
 　　钱六石点头：“好，这样的话，我们可以认为硅钢的量产已经得到了解决。”他接着说道，“其次就是输电线。我们现在制造不出钢芯铝绞线，那么唯一的选择就是铜裸线了。这就牵扯到电解铜的生产问题了。不仅是电线需要电解铜，电动机也需要大量的电解铜才能生产。以我们目前的电力供应情况有点紧张。”
 
 　　21世纪的中国工业，每生产一吨电解铜大约需要消耗309千瓦时的电。在临高的技术水平下，这个能耗恐怕要翻一倍才够。
+[y010]: /characters/y010 "常凯申"
