--- a/_posts/2013-7-17-6-09500.md
+++ b/_posts/2013-7-17-6-09500.md
@@ -6,13 +6,13 @@ path: 2013-7-17-6-09500.md
 tag: [normal]
 ---
 
-　　“这个只有请企划院协调，各部门谅解了。”常凯申插话道，“各企业错峰用电。”
+　　“这个只有请企划院协调，各部门谅解了。”[常凯申][y010]插话道，“各企业错峰用电。”
 
 　　“说得容易，有的设备不是说停机就可以停机的……”
 
 　　下面有人开始嘀咕。
 
-　　常凯申不予理会，钱六石只当没听见，其实这是个先有鸡还是先有蛋的问题。电力工业对电力本身就有很大的需求。他们现在两者都缺乏，唯有拼命压缩目前的电力供应，转到生产原材料上面。
+　　[常凯申][y010]不予理会，钱六石只当没听见，其实这是个先有鸡还是先有蛋的问题。电力工业对电力本身就有很大的需求。他们现在两者都缺乏，唯有拼命压缩目前的电力供应，转到生产原材料上面。
 
 　　法拉第心想：企划院果然不是人待的地方。难怪邬德当了几年院长，头发少了不少。
 
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　“哈哈哈哈哈……”
 
-　　眼看会场乌烟瘴气，常凯申借口出去抽烟一去不复返，钱六石作为临时的会议主持人，坐在那里脸红一阵白一阵，不过也快到吃饭的点儿了，等办公厅的女服务员摇着铃铛推来一车工作便当的时候，这段在历史书上记载为成功的胜利的有着重大意义的大会才暂告一段落。
+　　眼看会场乌烟瘴气，[常凯申][y010]借口出去抽烟一去不复返，钱六石作为临时的会议主持人，坐在那里脸红一阵白一阵，不过也快到吃饭的点儿了，等办公厅的女服务员摇着铃铛推来一车工作便当的时候，这段在历史书上记载为成功的胜利的有着重大意义的大会才暂告一段落。
 
 　　中午吃饭的时候，法拉第端着纸制便当盒，找到在旮旯里正在埋头吃饭的钱六石，坐在他对面，“钱富帅，咱们这会怎么他妈开这样了，咱们得明正朔诛邪佞啊。”
 
@@ -80,10 +80,11 @@ tag: [normal]
 
 　　半小时吃饭时间结束，会议重新召开。等大家人来齐了，钱六石清了清嗓子，站起来说：“同志们，弟兄们，早上通过热烈的讨论，嗯，虽然没有达成什么共识，但是大家坦率地交换了意见。现在呢，我希望咱们呢，下午就不要歪楼了。”
 
-　　常凯申终于“抽烟”回来了，他站起来，用诚挚的表情诚恳的说道：“搞发电送电，你们不行；搞设备，我们不行。这电力设备的制造就拜托大家了！”
+　　[常凯申][y010]终于“抽烟”回来了，他站起来，用诚挚的表情诚恳的说道：“搞发电送电，你们不行；搞设备，我们不行。这电力设备的制造就拜托大家了！”
 
 　　“没错，各位老少爷们，咱就别扯直流和电离层内输电什么的行不。”钱六石接口说道，“直流要是行的话，英国人、德国人、苏联人早搞了。在核聚变发电搞出来之前咱先不扯电离层输电的。这样吧，我们还是先让法拉第给大家讲讲电力工业，讲完了咱们再具体问题具体分析。”
 
 　　法拉第拿着自己前几天就赶出来的一叠玻璃片，他早就料到会有这么一出戏，钱六石把大家想得太大能了。
 
 　　他走到投影器前，放了一片在上面：“大家都知道第二次工业革命是电气革命，但是电气革命跟蒸汽革命很重要的一个区别就是，蒸汽机的发展是不断地在细节和工艺上的改进，其基本理论相对来说比较简单，同时也没有重大的理论变动。而电气革命从开始一直到二战后的一百年时间，是实践和理论共同发展的。1820年，奥斯特发现了电流磁现象，也就是电流会产生磁场。1831年电磁感应定律被我的前辈迈克尔·法拉第发现，也就是切割磁感应线会产生电流。”
+[y010]: /characters/y010 "常凯申"
