--- a/_posts/2014-1-18-6-28000.md
+++ b/_posts/2014-1-18-6-28000.md
@@ -90,7 +90,7 @@ tag: [normal]
 
 　　“退一万步说，就算四位元老犯了错，也是批评教育为主，居然对四位元老进行‘监控使用’。每个月政治保卫局都要递送监控报告。
 
-　　“这TM是什么手段！这是德意日的法西斯手段！是常凯申的青帮手段！！！
+　　“这TM是什么手段！这是德意日的法西斯手段！是[常凯申][y010]的青帮手段！！！
 
 　　“当年周总理明确规定特科‘不许搞党内侦察’就是因为某些下贱手段不能用在同志身上。
 
@@ -138,3 +138,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y156]: /characters/y156 "李潇侣"
 [y009]: /characters/y009 "吴南海"
+[y010]: /characters/y010 "常凯申"
