--- a/_posts/2009-10-21-2-00400.md
+++ b/_posts/2009-10-21-2-00400.md
@@ -72,11 +72,12 @@ tag: [normal]
 
 　　“我们边测绘边设计边施工好了，”梅晚到底是工地上混过的人物，对如何赶进度熟得很。当下作了分工，[李潇侣][y156]和燕雀志负责港区的测绘工作，测绘工作即是技术活也是体力活，所以再拨给一个基本劳力小组作辅助工，同时由军事组发给5连发猎枪一支作为防身用。
 
-　　田九九负责营区的给排水工作，常凯申负责送电业务，至于冰风，他的任务最为艰巨，建造货物堆栈。
+　　田九九负责营区的给排水工作，[常凯申][y010]负责送电业务，至于冰风，他的任务最为艰巨，建造货物堆栈。
 
-　　相形之下，常凯申的业务比较容易。执委会准备了各式各样的发电装置，还有许多配套的输变电设备，但是此时此刻这些东西还在集装箱里睡大觉。作为临时性的港口营地，用电点少，整体负荷小：主要满足的是照明用电、指挥部的办公用电和少数电动装卸机械设备。用电负荷较小。
+　　相形之下，[常凯申][y010]的业务比较容易。执委会准备了各式各样的发电装置，还有许多配套的输变电设备，但是此时此刻这些东西还在集装箱里睡大觉。作为临时性的港口营地，用电点少，整体负荷小：主要满足的是照明用电、指挥部的办公用电和少数电动装卸机械设备。用电负荷较小。
 
-　　根据这样的需求，这个简单的早期版供电网应该力求简单可靠，操作方便和尽量少用资材。因此常凯申的方案是不在岸上建立发电所，而是直接从丰城轮的辅机上取电——轮船下锚之后主机虽然停止，但是辅机还是一直运转着，为整个轮船提供能源。电力组便直接从船上配电间拉出一根380伏电缆，沿着浮动舟桥布线固定，一直延伸到岸上的配电所进行配电。整个供电网使用最为简单的放射形接线方式。这种接线方式也是过去中国农村电网中最常见的方式。它的缺点是线路发生故障或者检修的时候，就必需暂时停止对线路上所有用户的供电。不过这在目前的状况下还是可以允许的。唯一需要不间断供电的只有办公用电中的IT设备运转，那么使用UPS备用电源＋大功率蓄电池组也可以满足了。
+　　根据这样的需求，这个简单的早期版供电网应该力求简单可靠，操作方便和尽量少用资材。因此[常凯申][y010]的方案是不在岸上建立发电所，而是直接从丰城轮的辅机上取电——轮船下锚之后主机虽然停止，但是辅机还是一直运转着，为整个轮船提供能源。电力组便直接从船上配电间拉出一根380伏电缆，沿着浮动舟桥布线固定，一直延伸到岸上的配电所进行配电。整个供电网使用最为简单的放射形接线方式。这种接线方式也是过去中国农村电网中最常见的方式。它的缺点是线路发生故障或者检修的时候，就必需暂时停止对线路上所有用户的供电。不过这在目前的状况下还是可以允许的。唯一需要不间断供电的只有办公用电中的IT设备运转，那么使用UPS备用电源＋大功率蓄电池组也可以满足了。
 
 　　不过在实际的工程里，将输电缆直接固定在浮动栈桥上的设计被推翻了，执委会的意见是可能会漏电，不安全，而且线路固定在人车反复来往的栈桥上，可能在无意间被人为的损坏。工程组随即变更了设计，他们拆开了一组备份的浮动单元，用钢丝绳把这些空桶单独串联起来，浮在水面上。每个桶上还悬挂了配重物，保持其在水面上漂浮的稳定性。这条原打算用来输电的水上线路很快就发挥了更大的作用：首先是架设起了从船上抽取柴油的浮动输油管，然后是通讯组将船上的电话线直接拉到了岸上。这样，丰城轮就可以不使用步话机而直接和指挥部进行电话联系甚至发传真了。最大的好处是IT组的石开利用这条电话线，实现了网络连接，现在岸上的所有电脑都可以通过登陆指挥部的服务器直接访问船上的服务器双向传送资料了。OA系统实现了全面覆盖。
 [y156]: /characters/y156 "李潇侣"
+[y010]: /characters/y010 "常凯申"
