--- a/_posts/2011-2-14-3-30200.md
+++ b/_posts/2011-2-14-3-30200.md
@@ -98,10 +98,11 @@ tag: [normal]
 
 　　丰城轮的辅机一运转并网发电，博铺发电站的四台移动式100马力锅驼机全部停止运转。这些机器被送到机械厂拆开进行第一次大修，工能委在未来的电力领域将不再以锅驼机作为主要发电设备。
 
-　　“既然证明柴油机能够用煤气来运转，那么库存的柴油发电机组就可以全部投入使用了。”[王洛宾][y003]给电力公司的常凯申下达指示。
+　　“既然证明柴油机能够用煤气来运转，那么库存的柴油发电机组就可以全部投入使用了。”[王洛宾][y003]给电力公司的[常凯申][y010]下达指示。
 
 　　穿越集团带来的几套柴油发电机组因为缺少燃料，除了在最初百仞水电站没有发电之前运转过一阶段之后就一直是作为储备设备封存了，现在既然煤气代用获得成功，发电机组就能够重新投入运转了。
 
 　　锅驼机和随带的发电机组经过清理整修之后，将被安装到造船厂新建的二艘小型专用发电船上，作为移动式电站使用——比起柴油发电机组，它的最大优势就是燃料方便，很适合在这个除了临高就没有石油燃料的时空。
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
+[y010]: /characters/y010 "常凯申"
